<resources>
    <string name="tvIntro">Introduzca sus datos</string>
    <string name="tvInst">Resultados</string>
    <string name="tvRFC">Su RFC es:</string>
    <string name="tvNombre">Nombre(s):</string>
    <string name="feedbackname">Dale click aqui</string>
    <string name="tvApellidoPaterno">Apellido Paterno</string>
    <string name="tvApellidoMaterno">Apellido Materno</string>
    <string name="tvFecha">Fecha de nacimiento</string>
    <string name="btnListo">Listo</string>
    <string name="alertaDatos">Por favor revise sus datos</string>
    <string name="exitoso">Proceso exitoso</string>
    <string name="reqDatos">Obligatorio</string>
    <string name="tvHoros">Su signo zodiacal es:</string>
    <string name="tvChino">Su año chino es:</string>
    <string name="advertencia">Revise sus datos</string>
    <string name="error">Faltan datos</string>
    <string name="btnRegresa">Volver</string>
    <string name="btnSalir">Repetir</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
